fixed an alignment

--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@ a {
 }
 
 .nav__item {
-    margin-left: 2rem;
+    margin-left: .5rem;
     float: left;
 }
 
